2003-11-17  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b16

	* Fixed CSS file so text is readable with bluemod skin.

2003-11-17  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b15

	* Increase the warnings on vote initialization to try to stop 
	  people turning voting on in all albums by mistake.

2003-11-17 Jens Tkotz <jens@peino.de> 1.4.1-RC4-cvs-b14

	* Bugfix: Changed check in confirm.inc to 
	  catch empty fields which are new.

2003-11-17  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b13

	* Fixed bug where focus on new password page was an uneditable field.

2003-11-17  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b12

	* Added message if you run backup_albums.php from setup directory.

2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b11

        * Removed error message so skins/ can be removed without problems.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b10
	
	* Added backwards compatibility for user customized thumbnail frames.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b9

	* w3.org links only if devMode="yes"

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b8

	* Moved email.log to .users directory.

2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b7

	* Fixed bug introduced in -b3.  However, the problem that -b3 was
	  trying to fix was that new Gallery_UserDB was returning a generic
	  class.  Will revisit this later.  Note, this fix is from 
	  1.4.2-cvs-b10

2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b6

	* Ignore config_version when running backup script.

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b5

	* Modified backup_albums.php to prevent a catch-22 situation.  You 
	  had to be logged in as admin to run the backup.  you can't login 
	  until you have upgraded your albums.  But you should backup 