@@ -6,20 +6,12 @@
 	require($GALLERY_BASEDIR . "setup/init.php");
 
 	initLanguage();
-	if (getOS() == OS_WINDOWS) {
-		include($GALLERY_BASEDIR . "platform/fs_win32.php");
-		if (fs_file_exists("SECURE")) {
-			print _("You cannot access this file while gallery is in secure mode.");
-			exit;
-		}
-	}
 
 	// We set this to false to get the config stylesheet
         $GALLERY_OK=false;
 	extract($HTTP_POST_VARS);
 	require($GALLERY_BASEDIR . "setup/functions.inc");
 ?>
-
 <html>
 <head>
 	<title> <?php echo _("Check Mail") ?> </title>
@@ -28,6 +20,15 @@
 
 <body dir="<?php echo $gallery->direction ?>">
 <h1 class="header"><?php echo _("Check Mail") ?></h1>
+<?php
+	if (getOS() == OS_WINDOWS) {
+		if (fs_file_exists("SECURE")) {
+			echo _("You cannot access this file while gallery is in secure mode.");
+			echo "</body></html>";
+			exit;
+		}
+	}
+?>
 
 <?php 
 
