@@ -11,14 +11,6 @@
 	// We set this to false to get the config stylesheet
         $GALLERY_OK=false;
 
-	if (getOS() == OS_WINDOWS) {
-		include($GALLERY_BASEDIR . "platform/fs_win32.php");
-		if (fs_file_exists("SECURE")) {
-		print _("You cannot access this file while gallery is in secure mode.");
-		exit;
-	    }
-	}
-
 // Pull the $destroy variable into the global namespace
 extract($HTTP_GET_VARS);
 
@@ -47,7 +39,15 @@ $count++;
 
 <body dir="<?php echo $gallery->direction ?>">
 	<h1 class="header"><?php echo _("Session Test") ?></h1>
-
+<?php
+	if (getOS() == OS_WINDOWS) {
+		if (fs_file_exists("SECURE")) {
+		echo _("You cannot access this file while gallery is in secure mode.");
+		echo "</body></html>";
+		exit;
+	    }
+	}
+?>
 	<div class="sitedesc">
 		<?php echo _("If sessions are configured properly in your PHP installation, then you should see a session id below.") ?>
 	<br>
